[project]
name = "seatsio"
version = "82.0.0"
description = "The official Seats.io Python SDK"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "requests>=2.0, <3.0",
    "munch==4.0",
    "jsonpickle>=3.0, <4.0",
    "future==1.0.0"
]

[dependency-groups]
dev = [
    "parameterized==0.9.0",
    "pytest==8.3.4",
    "pytest-xdist==3.8.0"
]

[project.urls]
Repository = "https://github.com/seatsio/seatsio-python/"
Issues = "https://github.com/seatsio/seatsio-python/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"